; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_package.c_get_local_package.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_package.c_get_local_package.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@MSIDBOPEN_READONLY = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i32 0, align 4
@INVALID_FILE_ATTRIBUTES = common dso_local global i64 0, align 8
@ERROR_FILE_NOT_FOUND = common dso_local global i32 0, align 4
@ERROR_INSTALL_PACKAGE_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @get_local_package to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_local_package(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_5__*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @MSIDBOPEN_READONLY, align 4
  %12 = call i32 @MSI_OpenDatabaseW(i32* %10, i32 %11, %struct.TYPE_5__** %8)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* @ERROR_SUCCESS, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @GetFileAttributesW(i32* %16)
  %18 = load i64, i64* @INVALID_FILE_ATTRIBUTES, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* @ERROR_FILE_NOT_FOUND, align 4
  store i32 %21, i32* %3, align 4
  br label %57

22:                                               ; preds = %15
  %23 = load i32, i32* %9, align 4
  store i32 %23, i32* %3, align 4
  br label %57

24:                                               ; preds = %2
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %26 = call i32* @get_product_code(%struct.TYPE_5__* %25)
  store i32* %26, i32** %6, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %33, label %28

28:                                               ; preds = %24
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = call i32 @msiobj_release(i32* %30)
  %32 = load i32, i32* @ERROR_INSTALL_PACKAGE_INVALID, align 4
  store i32 %32, i32* %3, align 4
  br label %57

33:                                               ; preds = %24
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %35 = call i32* @get_package_code(%struct.TYPE_5__* %34)
  store i32* %35, i32** %7, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %44, label %37

37:                                               ; preds = %33
  %38 = load i32*, i32** %6, align 8
  %39 = call i32 @msi_free(i32* %38)
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 0
  %42 = call i32 @msiobj_release(i32* %41)
  %43 = load i32, i32* @ERROR_INSTALL_PACKAGE_INVALID, align 4
  store i32 %43, i32* %3, align 4
  br label %57

44:                                               ; preds = %33
  %45 = load i32*, i32** %6, align 8
  %46 = load i32*, i32** %7, align 8
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @get_registered_local_package(i32* %45, i32* %46, i32* %47)
  store i32 %48, i32* %9, align 4
  %49 = load i32*, i32** %7, align 8
  %50 = call i32 @msi_free(i32* %49)
  %51 = load i32*, i32** %6, align 8
  %52 = call i32 @msi_free(i32* %51)
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 0
  %55 = call i32 @msiobj_release(i32* %54)
  %56 = load i32, i32* %9, align 4
  store i32 %56, i32* %3, align 4
  br label %57

57:                                               ; preds = %44, %37, %28, %22, %20
  %58 = load i32, i32* %3, align 4
  ret i32 %58
}

declare dso_local i32 @MSI_OpenDatabaseW(i32*, i32, %struct.TYPE_5__**) #1

declare dso_local i64 @GetFileAttributesW(i32*) #1

declare dso_local i32* @get_product_code(%struct.TYPE_5__*) #1

declare dso_local i32 @msiobj_release(i32*) #1

declare dso_local i32* @get_package_code(%struct.TYPE_5__*) #1

declare dso_local i32 @msi_free(i32*) #1

declare dso_local i32 @get_registered_local_package(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
